// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DRepDetailPage renders the category badge in the detail header (snapshot) 1`] = `
<span
  aria-label="!!!Primary. !!!Has verified off-chain metadata."
  class="badge primary"
  title="!!!Has verified off-chain metadata."
>
  <span
    aria-hidden="true"
    class="dot"
  />
  <span
    class="label"
  >
    !!!Primary
  </span>
</span>
`;

exports[`DRepDetailPage renders the high value badge when the entry is above the cohort median (snapshot) 1`] = `
<span
  aria-label="!!!High value. !!!Inside the default Recommended view, with verified metadata and voting power above the cohort median."
  class="badge highValue"
  title="!!!Inside the default Recommended view, with verified metadata and voting power above the cohort median."
>
  <span
    aria-hidden="true"
    class="dot"
  />
  <span
    class="label"
  >
    !!!High value
  </span>
</span>
`;
